<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login.LoginFragment">

    <TextView
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:padding="16dp"
        android:layout_margin="16dp"
        android:inputType="text"
        android:hint="@string/user_name"
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:padding="16dp"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:textSize="24sp"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:text="@string/login"
        android:id="@+id/login_validate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>